# AI-Real-Image-Classification

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild-api.yaml  cloudbuild-trainer.yaml  cloudbuild.yaml  cloudbuild_api.yaml  cloudbuild_vertex.yaml  config.template.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_prod.txt  tasks.py
.dvc/: config
.github/workflows/: api_tests.yml  cml_data.yaml  codecheck.yaml  docker-build-push.yaml  tests.yaml
configs/: config.yaml
configs/optimizer/: adamw.yaml  sgd.yaml
configs/train/: default.yaml
data/: .gitignore  test.csv.dvc  test_data_v2.dvc  train.csv.dvc  train_data.dvc
docker/: api.dockerfile  backend.dockerfile  frontend.dockerfile  trainer.dockerfile
reports/: README.md
src/ai_real_image_classification/: api.py  data.py  export_onnx.py  frontend.py  model.py  onnx_fastapi.py  train.py  trainer.py
src/ai_real_image_classification/data/: dataset.py  dataset_statistics.py  make_dataset.py
tests/: test_data.py  test_model.py  train.csv
tests/integrationtests/: test_apis.py
tests/performancetests/: locustfile.py
